--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   home-assistant:
     image: homeassistant/home-assistant:stable
     network_mode: host
+    restart: on-failure
     extra_hosts:
       - 'host.docker.internal:192.168.1.74'
       - 'hass-db:192.168.1.74'
@@ -16,34 +17,34 @@ services:
       - hass-db
       - host-hostnames
       - mqtt-broker
-    hass-db:
-      image: postgres:11
-      networks:
-        - hass-net
-      extra_hosts:
-      - 'host.docker.internal:192.168.1.74'
-      ports:
-        - '5432:5432'
-      volumes:
-        - /usr/local/lib/hass-postgres-data:/var/lib/postgresql/data
-      environment:
-        POSTGRES_DB: hass
-      env_file: 'hass-postgres.env'
-    mqtt-broker:
-      image: eclipse-mosquitto
-      networks:
-        - hass-net
-      ports:
-        - '1883:1883'
-        - '9001:9001'
-      volumes:
-        - /usr/local/etc/docker-mosquitto:/mosquitto/config
-        - /usr/local/lib/docker-mosquitto:/mosquitto/data
-    host-hostnames:
-      image: dvdarias/docker-hoster
-      volumes:
-        - /var/run/docker.sock:/tmp/docker.sock
-        - /etc/hosts:/tmp/hosts
+  hass-db:
+    image: postgres:11
+    networks:
+      - hass-net
+    extra_hosts:
+    - 'host.docker.internal:192.168.1.74'
+    ports:
+      - '5432:5432'
+    volumes:
+      - /usr/local/lib/hass-postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: hass
+    env_file: 'hass-postgres.env'
+  mqtt-broker:
+    image: eclipse-mosquitto
+    networks:
+      - hass-net
+    ports:
+      - '1883:1883'
+      - '9001:9001'
+    volumes:
+      - /usr/local/etc/docker-mosquitto:/mosquitto/config
+      - /usr/local/lib/docker-mosquitto:/mosquitto/data
+  host-hostnames:
+    image: dvdarias/docker-hoster
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /etc/hosts:/tmp/hosts
 
 
 
