--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     restart: always
     extra_hosts:
       - 'host.docker.internal:10.0.0.15'
-      - 'hass-db:10.0.0.15'
+      # - 'hass-db:10.0.0.15'
     volumes: 
       - /home/admin/GitHub/hass-config:/config
       - /etc/localtime:/etc/localtime:ro
