--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   home-assistant:
-    image: homeassistant/home-assistant:latest
+    image: homeassistant/home-assistant:stable
     depends_on:
       - hass-db
       # - host-hostnames
