--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3'
 services:
   home-assistant:
     image: homeassistant/home-assistant:2021.2.0b3
-    depends_on:
-      - hass-db
+    # depends_on:
+      # - hass-db
       # - host-hostnames
       # - mqtt-broker
     restart: always
