Adding more functionality

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,39 +2,39 @@ version: '3'
 services:
   home-assistant:
     image: homeassistant/home-assistant:2021.2.0b3
-    # depends_on:
-      # - hass-db
+    depends_on:
+      - hass-db
       # - host-hostnames
-      # - mqtt-broker
+      - mqtt-broker
     restart: always
+    network_mode: host
     extra_hosts:
       - 'host.docker.internal:10.0.0.15'
-      # - 'hass-db:10.0.0.15'
+      - 'hass-db:10.0.0.15'
     volumes: 
       - ~/GitHub/hass-config:/config
       - /etc/localtime:/etc/localtime:ro
     ports:
       - '8123:8123'
-  # hass-db:
-  #   image: postgres:13
-  #   restart: always
-  #   extra_hosts:
-  #     - 'host.docker.internal:10.0.0.15'
-  #   ports:
-  #     - '5432:5432'
-  #   volumes:
-  #     - /usr/local/lib/hass-postgres-data:/var/lib/postgresql/data
-  #   environment:
-  #     postgres_db: hass
-  #   env_file: 'hass-postgres.env'
-  # mqtt-broker:
-  #   image: eclipse-mosquitto
-  #   ports:
-  #     - '1883:1883'
-  #     - '9001:9001'
-  #   volumes:
-  #     - /usr/local/etc/docker-mosquitto:/mosquitto/config
-  #     - /usr/local/lib/docker-mosquitto:/mosquitto/data
+  hass-db:
+    image: postgres:13
+    extra_hosts:
+      - 'host.docker.internal:10.0.0.15'
+    ports:
+      - '5432:5432'
+    volumes:
+      - /usr/local/lib/hass-postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: hass
+    env_file: 'hass-postgres.env'
+  mqtt-broker:
+    image: eclipse-mosquitto
+    ports:
+      - '1883:1883'
+      - '9001:9001'
+    volumes:
+      - /usr/local/etc/docker-mosquitto:/mosquitto/config
+      - /usr/local/lib/docker-mosquitto:/mosquitto/data
   # host-hostnames:
   #   image: dvdarias/docker-hoster
   #   volumes:
