--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     depends_on:
       - hass-db
       - host-hostnames
-      # - mqtt-broker
+      - mqtt-broker
     restart: always
     network_mode: host
     extra_hosts:
@@ -27,16 +27,17 @@ services:
     environment:
       POSTGRES_DB: hass
     env_file: 'hass-postgres.env'
-  # mqtt-broker:
-  #   image: eclipse-mosquitto
-  #   ports:
-  #     - '1883:1883'
-  #     - '9001:9001'
-  #   volumes:
-  #     - /usr/local/etc/docker-mosquitto:/mosquitto/config
-  #     - /usr/local/lib/docker-mosquitto:/mosquitto/data
-  host-hostnames:
-    image: dvdarias/docker-hoster
+  mqtt-broker:
+    image: eclipse-mosquitto
+    ports:
+      - '1883:1883'
+      - '9001:9001'
     volumes:
-      - /var/run/docker.sock:/tmp/docker.sock
-      - /etc/hosts:/tmp/hosts
+      - /usr/local/etc/docker-mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - /usr/local/lib/docker-mosquitto:/mosquitto/data
+      - /usr/local/share/docker-mosquitto:/mosquitto/log
+  # host-hostnames:
+  #   image: dvdarias/docker-hoster
+  #   volumes:
+  #     - /var/run/docker.sock:/tmp/docker.sock
+  #     - /etc/hosts:/tmp/hosts
