--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,8 @@ services:
       - /usr/local/etc/docker-mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
       - /usr/local/lib/docker-mosquitto:/mosquitto/data
       - /usr/local/share/docker-mosquitto:/mosquitto/log
-  # host-hostnames:
-  #   image: dvdarias/docker-hoster
-  #   volumes:
-  #     - /var/run/docker.sock:/tmp/docker.sock
-  #     - /etc/hosts:/tmp/hosts
+  host-hostnames:
+    image: dvdarias/docker-hoster
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock
+      - /etc/hosts:/tmp/hosts
