--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
     # image: dvdarias/docker-hoster:latest
     build:
       context: './docker-hoster'
-      dockerfile: './docker-hoster/dockerfile'
+      dockerfile: '.\docker-hoster\dockerfile'
     restart: on-failure
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock
