--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
     restart: always
     ports: 
       - '8123:8123'
+    networks:
+      - hass-net
     network_mode: host
     extra_hosts:
       - 'host.docker.internal:10.0.0.15'
