--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   home-assistant:
-    image: homeassistant/raspberrypi4-home-assistant:2021.2.0
+    image: homeassistant/raspberrypi4-home-assistant:stable
     depends_on:
       - hass-db
       - host-hostnames
